--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -28,14 +28,14 @@
         border-top-right-radius 0
         border-bottom-right-radius 0
         color #fff
-        background-color #72bca6
+        background-color green-blue
         margin-right 0
 
   .workspace-tab-component
     position relative
     margin 0px
     width 70%
-    border-left 5px solid #72bca6
+    border-left 5px solid green-blue
     padding 10px
     padding-bottom 50px
     &[data-inert]
@@ -71,7 +71,7 @@
             margin-right 7px
         div.selected
           color: #fff
-          background-color #72bfca
+          background-color teal
         div.selectable:hover
           color: #fff
           background-color: green-blue
